errorprone :: search UngroupedOverloads & MixedMutabilityReturnType (#1002)